--- a/MPFmaster/MPFmaster.vcxproj
+++ b/MPFmaster/MPFmaster.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bswap.h" />
+    <ClInclude Include="crc24.h" />
     <ClInclude Include="PathFinderStructs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
